BugFix: Message height is incorrect and styled scrollbars

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -332,17 +332,18 @@ select:-webkit-autofill:focus
   font: inherit;
   height: auto;
   width: 100%;
+  margin-bottom: -7px;
 
   &-gutters {
     display: none;
   }
 
   &-lines {
-    padding: 0;
+    padding: 0 ;
   }
 
   &-sizer {
-    min-height: auto !important;
+    min-height: auto;
   }
 
   span.cm-builtin {
@@ -368,4 +369,20 @@ select:-webkit-autofill:focus
       background: rgba(0, 0, 0, .25);
     }
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #212121;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #212121;
 }
